--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -15,6 +15,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y \
+          curl \
           build-essential \
           libncurses-dev \
           bison \
@@ -39,6 +40,8 @@ jobs:
     - name: Clone kernel source
       run: |
         git clone https://github.com/LeeHe-gif/android_kernel_xiaomi_sdm845.git
+        cd android_kernel_xiaomi_sdm845
+        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s v0.9.5
         
     - name: Build kernel
       run: |
