--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -14,15 +14,19 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y \
+sudo apt-get install -y \
           curl \
           build-essential \
           libncurses-dev \
           bison \
+          bc \
           flex \
           libssl-dev \
           libelf-dev \
+          rsync \
+          kmod \
           git \
+          cpio \
           wget \
           zip \
           unzip \
