更新 build-kernel.yml

--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -15,6 +15,9 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y libssl-dev gcc-arm-linux-gnueabi clang  build-essential libncurses5-dev bzip2 make python-is-python3 gcc g++ grep bc curl bison flex openssl lzop ccache unzip libssl-dev zlib1g-dev ninja-build texinfo file ca-certificates ccache wget cmake texinfo ca-certificates zlib1 g-dev xz-utils libelf-dev
+        wget https://github.com/llvm/llvm-project/releases/download/llvmorg-14.0.6/clang+llvm-14.0.6-aarch64-linux-gnu.tar.xz
+        tar -xvf clang+llvm-14.0.6-aarch64-linux-gnu.tar.xz
+        rm -rf clang+llvm-14.0.6-aarch64-linux-gnu.tar.xz
         
     - name: Clone anykernel3 repository
       run: |
