--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -106,6 +106,7 @@ jobs:
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
+        tag_name: "polaris-kernel-build"  # 添加固定的 tag 名称
         name: "Polaris Docker Kernel Build (GCC 7.5.0)"
         body: |
           # Polaris Docker Kernel Build
